--- a/Drette.Tender.Shared/Drette.Tender.Shared.csproj
+++ b/Drette.Tender.Shared/Drette.Tender.Shared.csproj
@@ -69,6 +69,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -77,15 +78,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\ItemsRepository.cs" />
+    <Compile Include="Data\EntityCache.cs" />
+    <Compile Include="Data\InventoriesRepository.cs" />
     <Compile Include="Data\BaseRepository.cs" />
     <Compile Include="Data\Context.cs" />
     <Compile Include="Data\DatabaseInitializer.cs" />
-    <Compile Include="Data\EntriesRepository.cs" />
-    <Compile Include="Models\Model.cs" />
-    <Compile Include="Models\Spec.cs" />
-    <Compile Include="Models\Item.cs" />
-    <Compile Include="Models\Entry.cs" />
+    <Compile Include="Models\Part.cs" />
+    <Compile Include="Models\InventoryDetails.cs" />
+    <Compile Include="Models\Shop.cs" />
+    <Compile Include="Models\Inventory.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\ApplicationSignInManager.cs" />
