--- a/Drette.Tender.Shared/Drette.Tender.Shared.csproj
+++ b/Drette.Tender.Shared/Drette.Tender.Shared.csproj
@@ -78,13 +78,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\EntityCache.cs" />
     <Compile Include="Data\InventoriesRepository.cs" />
     <Compile Include="Data\BaseRepository.cs" />
     <Compile Include="Data\Context.cs" />
     <Compile Include="Data\DatabaseInitializer.cs" />
+    <Compile Include="Data\PartsRepository.cs" />
+    <Compile Include="Data\Repository.cs" />
     <Compile Include="Models\Part.cs" />
-    <Compile Include="Models\InventoryDetails.cs" />
+    <Compile Include="Models\Project.cs" />
     <Compile Include="Models\Shop.cs" />
     <Compile Include="Models\Inventory.cs" />
     <Compile Include="Models\User.cs" />
