--- a/Drette.Tender.Shared/Drette.Tender.Shared.csproj
+++ b/Drette.Tender.Shared/Drette.Tender.Shared.csproj
@@ -84,10 +84,11 @@
     <Compile Include="Data\DatabaseInitializer.cs" />
     <Compile Include="Data\PartsRepository.cs" />
     <Compile Include="Data\Repository.cs" />
-    <Compile Include="Models\Part.cs" />
+    <Compile Include="Models\Product.cs" />
     <Compile Include="Models\Project.cs" />
-    <Compile Include="Models\Shop.cs" />
+    <Compile Include="Models\Supplier.cs" />
     <Compile Include="Models\Inventory.cs" />
+    <Compile Include="Models\Unit.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\ApplicationSignInManager.cs" />
