--- a/Drette.Tender.Shared/Drette.Tender.Shared.csproj
+++ b/Drette.Tender.Shared/Drette.Tender.Shared.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Data\PartsRepository.cs" />
     <Compile Include="Data\Repository.cs" />
     <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\ProductType.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\Supplier.cs" />
     <Compile Include="Models\Inventory.cs" />
