--- a/Drette.Tender.Shared/Drette.Tender.Shared.csproj
+++ b/Drette.Tender.Shared/Drette.Tender.Shared.csproj
@@ -82,11 +82,10 @@
     <Compile Include="Data\BaseRepository.cs" />
     <Compile Include="Data\Context.cs" />
     <Compile Include="Data\DatabaseInitializer.cs" />
-    <Compile Include="Data\PartsRepository.cs" />
+    <Compile Include="Data\ProductRepository.cs" />
     <Compile Include="Data\Repository.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductType.cs" />
-    <Compile Include="Models\Project.cs" />
     <Compile Include="Models\Supplier.cs" />
     <Compile Include="Models\Inventory.cs" />
     <Compile Include="Models\Unit.cs" />
