--- a/Drette.Tender.Shared/Drette.Tender.Shared.csproj
+++ b/Drette.Tender.Shared/Drette.Tender.Shared.csproj
@@ -82,7 +82,7 @@
     <Compile Include="Data\BaseRepository.cs" />
     <Compile Include="Data\Context.cs" />
     <Compile Include="Data\DatabaseInitializer.cs" />
-    <Compile Include="Data\ProductRepository.cs" />
+    <Compile Include="Data\ProductsRepository.cs" />
     <Compile Include="Data\Repository.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductType.cs" />
