--- a/Drette.Tender.Shared/Drette.Tender.Shared.csproj
+++ b/Drette.Tender.Shared/Drette.Tender.Shared.csproj
@@ -86,6 +86,8 @@
     <Compile Include="Data\ProductTypesRepository.cs" />
     <Compile Include="Data\SuppliersRepository.cs" />
     <Compile Include="Data\UnitsRepository.cs" />
+    <Compile Include="Models\InventoryInput.cs" />
+    <Compile Include="Models\InventoryOutput.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductType.cs" />
     <Compile Include="Models\Supplier.cs" />
