Updated MVC to handle inventory Inputs

--- a/Drette.Tender.Shared/Drette.Tender.Shared.csproj
+++ b/Drette.Tender.Shared/Drette.Tender.Shared.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Data\BaseRepository.cs" />
     <Compile Include="Data\Context.cs" />
     <Compile Include="Data\DatabaseInitializer.cs" />
+    <Compile Include="Data\InventoryInputsRepository.cs" />
     <Compile Include="Data\ProductsRepository.cs" />
     <Compile Include="Data\ProductTypesRepository.cs" />
     <Compile Include="Data\SuppliersRepository.cs" />
