Updated model and controller to handle outputs and added the view in InventoriesViews

--- a/Drette.Tender.Shared/Drette.Tender.Shared.csproj
+++ b/Drette.Tender.Shared/Drette.Tender.Shared.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Data\Context.cs" />
     <Compile Include="Data\DatabaseInitializer.cs" />
     <Compile Include="Data\InventoryInputsRepository.cs" />
+    <Compile Include="Data\InventoryOutputsRepository.cs" />
     <Compile Include="Data\ProductsRepository.cs" />
     <Compile Include="Data\ProductTypesRepository.cs" />
     <Compile Include="Data\SuppliersRepository.cs" />
