--- a/Drette.Tender/Drette.Tender.csproj
+++ b/Drette.Tender/Drette.Tender.csproj
@@ -134,6 +134,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ViewModels\InventoryInputsViewModel.cs" />
+    <Compile Include="ViewModels\InventoryOutputsViewModel.cs" />
     <Compile Include="ViewModels\ProductsAddViewModel.cs" />
     <Compile Include="ViewModels\ProductsBaseViewModel.cs" />
     <Compile Include="ViewModels\ProductsIndexViewModel.cs" />
@@ -200,6 +201,7 @@
     <Content Include="Views\Products\Add.cshtml" />
     <Content Include="Views\Products\_ProductForm.cshtml" />
     <Content Include="Views\Inventories\Input.cshtml" />
+    <Content Include="Views\Inventories\Output.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
