--- a/Drette.Tender/Drette.Tender.csproj
+++ b/Drette.Tender/Drette.Tender.csproj
@@ -202,6 +202,7 @@
     <Content Include="Views\Products\_ProductForm.cshtml" />
     <Content Include="Views\Inventories\Input.cshtml" />
     <Content Include="Views\Inventories\Output.cshtml" />
+    <Content Include="Views\Inventories\Detail.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
