--- a/Drette.Tender.Shared/Drette.Tender.Shared.csproj
+++ b/Drette.Tender.Shared/Drette.Tender.Shared.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Models\InventoryInput.cs" />
     <Compile Include="Models\InventoryOutput.cs" />
     <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\ProductModification.cs" />
     <Compile Include="Models\ProductType.cs" />
     <Compile Include="Models\Supplier.cs" />
     <Compile Include="Models\Inventory.cs" />
