--- a/Drette.Tender.Shared/Drette.Tender.Shared.csproj
+++ b/Drette.Tender.Shared/Drette.Tender.Shared.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Data\DatabaseInitializer.cs" />
     <Compile Include="Data\InventoryInputsRepository.cs" />
     <Compile Include="Data\InventoryOutputsRepository.cs" />
+    <Compile Include="Data\ProductModificationsRepository.cs" />
     <Compile Include="Data\ProductsRepository.cs" />
     <Compile Include="Data\ProductTypesRepository.cs" />
     <Compile Include="Data\SuppliersRepository.cs" />
