Added Project and Task's models

--- a/Drette.Tender.Shared/Drette.Tender.Shared.csproj
+++ b/Drette.Tender.Shared/Drette.Tender.Shared.csproj
@@ -89,13 +89,19 @@
     <Compile Include="Data\ProductTypesRepository.cs" />
     <Compile Include="Data\SuppliersRepository.cs" />
     <Compile Include="Data\UnitsRepository.cs" />
+    <Compile Include="Models\Project.cs" />
+    <Compile Include="Models\TaskDeadline.cs" />
+    <Compile Include="Models\TaskInformations.cs" />
     <Compile Include="Models\InventoryInput.cs" />
     <Compile Include="Models\InventoryOutput.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductModification.cs" />
     <Compile Include="Models\ProductType.cs" />
+    <Compile Include="Models\Task.cs" />
     <Compile Include="Models\Supplier.cs" />
     <Compile Include="Models\Inventory.cs" />
+    <Compile Include="Models\TaskState.cs" />
+    <Compile Include="Models\TaskTimeCost.cs" />
     <Compile Include="Models\Unit.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
